--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -80,8 +80,8 @@
 	  </button>
 	  <br>
 	  	<div class="button-group float-right">
-		  <a class="button success hollow">아니오</a>
-		  <a class="button success" href="javascript:doLogout();">예</a>
+		  <a class="button secondary hollow">아니오</a>
+		  <a class="button alert" href="javascript:doLogout();">예</a>
 		</div>
 	</div>
 
