--- a/src/main/resources/templates/page/content.html
+++ b/src/main/resources/templates/page/content.html
@@ -36,8 +36,8 @@
 		    <option value="{{groupId}}">{{#name}}{{name}}{{/name}}</option>
 			{{/list}}
 		  </select>
-		  <i class="button success hollow fi-plus tree-btn" id="btn-expand-all" title="전체메뉴펼치기"></i>
-		  <i class="button success hollow fi-minus tree-btn" id="btn-collapse-all" title="전체메뉴접기"></i>
+		  <i class="button alert hollow fi-plus tree-btn" id="btn-expand-all" title="전체메뉴펼치기"></i>
+		  <i class="button primary hollow fi-minus tree-btn" id="btn-collapse-all" title="전체메뉴접기"></i>
 	</div>
 	<div class="cell small-4">
   	  	<div class="button-group float-right">
