--- a/src/main/resources/templates/page/group.html
+++ b/src/main/resources/templates/page/group.html
@@ -2,14 +2,8 @@
 
 {{#style}}
 <style>
-.bf-detail-area > div { border: 1px solid #ccc; border-radius: 6px;padding: 16px; }
 .left-section { background-image: url('/img/bg-group-left.jpg');
 	border: 1px solid #ccc; border-left: 0; }
-.contents-area { height: calc(100% - 60px); }
-table th, table td { border: 1px solid #ccc; border-collapse: collapse; }
-table th { text-align: center; }
-table td.btn-list-item:hover { background-color: #77b2d8; cursor: pointer; }
-.btn-list-item.primary { background-color: #1779ba; color: white; }
 </style>
 {{/style}}
 
@@ -21,8 +15,8 @@ table td.btn-list-item:hover { background-color: #77b2d8; cursor: pointer; }
 	  </ul>
 	</nav>
 	<div class="button-group float-right">
-	  <a class="button small secondary hollow" href="javascript:void(0);" id="btn-delete">삭제</a>
-	  <a class="button small primary" href="javascript:void(0);" id="btn-modify">수정완료</a>
+	  <a class="button small alert" href="javascript:void(0);" id="btn-delete">삭제</a>
+	  <a class="button small success" href="javascript:void(0);" id="btn-modify">수정완료</a>
 	  <a class="button small primary" href="javascript:void(0);" id="btn-create">등록</a>	
 	</div>
 </div>
@@ -51,7 +45,7 @@ table td.btn-list-item:hover { background-color: #77b2d8; cursor: pointer; }
 		    </tr>
 		    {{/list}}
 		    </tbody>
-		</table>	
+		</table>
 		<ul>
 		  <li>
 		  <a class="cell button success expanded" href="javascript:void(0);" onclick="getCategory();">
@@ -64,15 +58,15 @@ table td.btn-list-item:hover { background-color: #77b2d8; cursor: pointer; }
 	<div class="cell small-6 bf-detail-area">
 		<!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
 		<div>
-			<label for="groupId" class="col-sm-2 col-form-label"><i class="fi-link"></i>&nbsp;도움말그룹URI</label>
+			<label for="groupId"><i class="fi-link"></i>&nbsp;도움말그룹URI</label>
 			<div class="col-sm-10">
 			  <input type="text" id="groupId" class="form-control" placeholder="영소문자 (공백없음)" value="{{#item}}{{item.uri}}{{/item}}" maxlength="20">
 			</div>
-			<label for="name" class="col-sm-2 col-form-label"><i class="fi-torso"></i>&nbsp;도움말그룹명</label>
+			<label for="name"><i class="fi-torso"></i>&nbsp;도움말그룹명</label>
 			<div class="col-sm-10">
 			  <input type="text" id="name" class="form-control" placeholder="한글이름" value="{{#item}}{{item.name}}{{/item}}" maxlength="20">
 			</div>
-			<label for="orderNo" class="col-sm-2 col-form-label"><i class="fi-list-number"></i>&nbsp;정렬순서</label>
+			<label for="orderNo"><i class="fi-list-number"></i>&nbsp;정렬순서</label>
 			<div class="col-sm-10">
 			  <input type="text" id="orderNo" class="form-control" placeholder="숫자 (0~255)" value="{{#item}}{{item.orderNo}}{{/item}}" maxlength="3">
 			</div>
