--- a/src/main/resources/templates/page/release.html
+++ b/src/main/resources/templates/page/release.html
@@ -2,22 +2,12 @@
 
 {{#style}}
 <style>
-input[type="button"] + input[type="button"] { margin-right: 12px; }
-#bf-content-area .col { overflow-y: auto; height: 100%; }
-#bf-content-area .header-row > .col { padding-top: 10px; overflow-y: hidden; }
-.header-row { text-align: center; width: 100%; }
-.header-row table { width: 100%; }
+.bf-body-wrapper { height: calc(100% - 100px); }
 .list-table th, .list-table td { border: 1px solid #ddd; border-collapse: collapse; font-size: 12px; }
 .list-row { width: 100%; height: calc(100% - 150px); }
 .list-row .col { height: 100%; overflow-y: auto; padding-right: 0; }
-ul.list-wrapper { padding: 0; }
-ul.list-wrapper li { padding: 2px 10px; font-size: 14px; font-weight: 300; list-style-type: none; border-bottom: 1px solid #ccc; }
-.btn-wrapper { text-align: right; }
-.btn-wrapper input { margin-left: 6px; margin-right: 0; }
-input[type="button"] + input[type="button"] { margin-right: 0; }
 .list-table td { font-size: 12px; border: 1px solid #ddd; border-collapse: collapse; padding-left: 6px; padding-right: 6px; }
-.list-table .material-icons { float: left; color: #555; }
-.material-icons + div { margin: 2px 0 0 28px; }
+.contents-area div.cell { height: 100%; overflow-y: auto; }
 </style>
 {{/style}}
 
@@ -35,142 +25,117 @@ input[type="button"] + input[type="button"] { margin-right: 0; }
 	</div>
 </div>
 
-<div id="bf-content-area">
-	<div class="row header-row">
+<div class="grid-x contents-area">
+
+	<!-- 1) 미배포 변경사항 -->
+	<div class="cell small-3 left-section">
+		<h5>배포이력</h5>
+		<table class="list-table">
+			<colgroup>
+				<col width="33%" />
+				<col width="33%" />
+				<col width="33%" />
+			</colgroup>
+			<thead>
+				<tr>
+					<td>배포구분</td>
+					<td>배포자</td>
+					<td>다운로드일시</td>
+				</tr>
+			</thead>
+			<tbody>
+				{{#rlist}}
+				<tr>
+					<td>
+				  		<a href="javascript:downloadFromHistory({{id}})"><span><i class="far fa-file-code"></i>&nbsp;{{typeKr}}</span></a>
+				 		</td>
+				 		<td>{{#userid}}{{userid}}{{/userid}}</td>
+				 		<td>{{updDtStr}}</td>
+				</tr>
+				{{/rlist}}
+							{{^rlist}}
+				<tr>
+					<td class="text-center" colspan="3">내역이 없습니다</td>
+				</tr>
+				{{/rlist}}
+			</tbody>
+		</table>
+	</div>
+	
+	<!-- 2) 변경이력 -->
+	<div class="cell small-3">
+      <h5>미배포 변경사항</h5>
+		<table class="list-table">
+			<colgroup>
+				<col width="20%" />
+				<col width="40%" />
+				<col width="40%" />
+			</colgroup>
+			<thead>
+				<tr>
+					<th>작업</th>
+					<th>파일명</th>
+					<th>최종변경일시</th>
+				</tr>
+			</thead>
+			<tbody>
+   				{{#clist}}
+				<tr>
+					<td class="text-center"><span class="material-icons">{{status}}</span></td>
+					<td>{{#filePath}}{{filePath}}{{/filePath}}</td>
+					<td class="text-center">{{updDtStr}}</td>
+				</tr>
+				{{/clist}}
+   				{{^clist}}
+				<tr>
+					<td class="text-center" colspan="3">내역이 없습니다</td>
+				</tr>
+				{{/clist}}
+			</tbody>
+		</table>
+	</div>
+	
+	<!-- 3) 배포이력 -->
+	<div class="cell small-6">
+      <h5>변경이력</h5>
+	  <table class="list-table">
+		<colgroup>
+			<col width="8%"/>
+			<col width="18%"/>
+			<col width="25%"/>
+			<col width="15%"/>
+			<col width="14%"/>
+			<col width="20%"/>
+		</colgroup>
+		<thead>
+			<tr>
+				<th>작업</th>
+				<th>구분</th>
+				<th>이름</th>
+				<th>파일명</th>
+				<th>변경자</th>
+				<th>변경일시</th>
+			</tr>
+		</thead>
+		<tbody>
+			{{#hlist}}
+			<tr {{^released}}style="background-color: #ffcc;"{{/released}}>
+				<td class="text-center"><span class="material-icons">{{status}}</span></td>
+				<td class="text-center">{{type}}</td>
+				<td class="text-left">{{#title}}{{title}}{{/title}}</td>
+				<td class="text-left">{{#filePath}}{{filePath}}{{/filePath}}</td>
+				<td class="text-center">{{#userid}}{{userid}}{{/userid}}</td>
+				<td class="text-center">{{updDtStr}}</td>
+			</tr>
+			{{/hlist}}
+			{{^hlist}}
+			<tr>
+				<td class="text-center" colspan="6">내역이 없습니다</td>
+			</tr>
+			{{/hlist}}
+			</tbody>
+		</table>
 		
-		<!-- 1) 미배포 변경사항 -->
-		<div class="col col-sm-3" style="padding-left: 30px;">
-	      <div class="row">
-      		<div class="col col-sm-12">
-		      <h5>미배포 변경사항</h5>
-	        </div>
-	      </div>
-	      <div class="row">
-      		<div class="col col-sm-12">
-      			<table class="list-table">
-      				<colgroup>
-     					<col width="20%" />
-     					<col width="40%" />
-     					<col width="40%" />
-      				</colgroup>
-      				<thead>
-	    				<tr>
-	    					<th>작업</th>
-	    					<th>파일명</th>
-	    					<th>마지막변경일시</th>
-	    				</tr>
-    				</thead>
-    				<tbody>
-    				{{#clist}}
-					<tr>
-						<td class="text-center"><span class="material-icons">{{status}}</span></td>
-						<td>{{#filePath}}{{filePath}}{{/filePath}}</td>
-						<td class="text-center">{{updDtStr}}</td>
-					</tr>
-					{{/clist}}
-    				{{^clist}}
-					<tr>
-						<td class="text-center" colspan="3">내역이 없습니다</td>
-					</tr>
-					{{/clist}}
-					</tbody>
-      			</table>
-	        </div>
-	      </div>
-		</div>
-		
-		<!-- 2) 변경이력 -->
-		<div class="col col-sm-6">
-	      <div class="row">
-      		<div class="col col-sm-12">
-		      <h5>변경이력</h5>
-	        </div>
-	      </div>
-	      <div class="row">
-      		<div class="col col-sm-12" style="padding-right: 1px;">
-      			<table class="list-table">
-      				<colgroup>
-	  					<col width="8%"/>
-	  					<col width="18%"/>
-	  					<col width="25%"/>
-	  					<col width="15%"/>
-	  					<col width="14%"/>
-	  					<col width="20%"/>
-      				</colgroup>
-      				<thead>
-    				<tr>
-    					<th>작업</th>
-    					<th>구분</th>
-    					<th>이름</th>
-    					<th>파일명</th>
-    					<th>변경자</th>
-    					<th>변경일시</th>
-    				</tr>
-    				</thead>
-    				<tbody>
-    				{{#hlist}}
-					<tr {{^released}}style="background-color: #ffcc;"{{/released}}>
-						<td class="text-center"><span class="material-icons">{{status}}</span></td>
-						<td class="text-center">{{type}}</td>
-						<td class="text-left">{{#title}}{{title}}{{/title}}</td>
-						<td class="text-left">{{#filePath}}{{filePath}}{{/filePath}}</td>
-						<td class="text-center">{{#userid}}{{userid}}{{/userid}}</td>
-						<td class="text-center">{{updDtStr}}</td>
-					</tr>
-					{{/hlist}}
-    				{{^hlist}}
-					<tr>
-						<td class="text-center" colspan="6">내역이 없습니다</td>
-					</tr>
-					{{/hlist}}
-					</tbody>
-      			</table>
-	        </div>
-		  </div>
-		</div>
-		
-		<!-- 3) 배포이력 -->
-		<div class="col col-sm-3" style="padding-right: 0px;overflow-x: hidden;">
-	      <div class="row">
-      		<div class="col col-sm-12">
-		      <h5>배포이력</h5>
-	        </div>
-	      </div>
-	      <div class="row">
-      		<div class="col col-sm-12">
-      			<table class="list-table">
-      				<colgroup>
-     					<col width="33%" />
-     					<col width="33%" />
-     					<col width="33%" />
-      				</colgroup>
-      				<thead>
-    				<tr>
-    					<td>배포구분</td>
-    					<td>배포자</td>
-    					<td>다운로드일시</td>
-    				</tr>
-    				</thead>
-    				<tbody>
-					{{#rlist}}
-					<tr>
-						<td>
-					  		<a href="javascript:downloadFromHistory({{id}})"><span><i class="far fa-file-code"></i>&nbsp;{{typeKr}}</span></a>
-				  		</td>
-				  		<td>{{#userid}}{{userid}}{{/userid}}</td>
-				  		<td>{{updDtStr}}</td>
-					</tr>
-					{{/rlist}}
-    				{{^rlist}}
-					<tr>
-						<td class="text-center" colspan="3">내역이 없습니다</td>
-					</tr>
-					{{/rlist}}
-					</tbody>
-      			</table>
-	        </div>
-	      </div>     	   
-		</div>
 	</div>
 	
 </div>
