--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,12 +7,13 @@
 	content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 <title>DB금융투자 :: 온라인매뉴얼</title>
 <link href="/img/favicon.ico" rel="shortcut icon" type="image/ico" />
+<link rel="stylesheet" href="css/noto-sans-kr.css">
 <link rel="stylesheet" href="css/foundation.css">
 <link rel="stylesheet" href="foundation-icons/foundation-icons.css" />
-<link rel="stylesheet" href="css/global.css">
 <link rel="stylesheet" href="/css/context.standalone.css">
 <link rel="stylesheet" href="/jquery/contextmenu/jquery.contextMenu.min.css">
 <link rel="stylesheet" href="/jquery/fancytree/skin-lion/ui.fancytree.css">
+<link rel="stylesheet" href="css/global.css">
 <link rel="stylesheet" href="/SynapEditor_2.8.4/synapeditor/synapeditor.min.css">
 <style>
 
