--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -23,30 +23,24 @@ select { border: 1px solid #05854A; color: #05854A;  border-radius: 3px; max-wid
 span.fancytree-selected span.fancytree-title, span.fancytree-active span.fancytree-title { border: none; outline: none; }
 span.fancytree-node { height: 21px; }
 ul.fancytree-container li { min-height: 21px!important; }
-span.fancytree-icon { background-position: 0px 5px; height: 21px; }
-span.fancytree-title { display: initial!important; border: 0!important; line-height: 23px; padding: 2px 3px!important; }
-.fancytree-title input { display: inline; min-width: 180px; height: 21px; font-size: 13.333px; padding: 0 6px; color: #05854A;
-	border-top: 3px solid #05854A!important; border-bottom: 3px solid #05854A!important; 
-	border-left: 0; border-right: 0; }
-span.fancytree-focused, span.fancytree-title { outline: none!important; } 
+span.fancytree-icon { height: 16px; }
+span.fancytree-title { display: initial!important; border: 0!important; line-height: 23px; color: #555; }
+.fancytree-title input { display: inline; min-width: 180px; height: 21px; font-size: 13.333px; padding: 0; color: #3875D7;
+	border: 2px solid #3875D7; border-radius: 0; }
+span.fancytree-focused, span.fancytree-title { outline: none!important; /* background-color: inherit; */ } 
+span.fancytree-selected span.fancytree-title, span.fancytree-active span.fancytree-title { background-color: inherit; }
 span.fancytree-icon, span.fancytree-checkbox, span.fancytree-expander, span.fancytree-custom-icon { margin-top: 3px!important; }
-span.fancytree-selected span.fancytree-title, span.fancytree-active span.fancytree-title {
-    font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-    border-radius: 3px;
-}
 .callout a.button { display: none; }
-.fancytree-treefocus span.fancytree-selected span.fancytree-title, .fancytree-treefocus span.fancytree-active span.fancytree-title { 
-	background-color: #05854A!important; }
 .cell.shrink.footer { background-color: white; border-top: 1px solid #ccc; z-index: 1; position: absolute; bottom: 0; 
 	height: 48px; padding-top: 7px; background-image: url('../img/bg-footer-right.jpg');
 	background-position: top right; background-repeat: no-repeat; }
 .footer-text { font-size: 11px; color: #555; margin-top: 8px; }
 label { color: #05854A; }
 .breadcrumbs li { font-size: 13px; }
-
 .bf-body-wrapper > .callout.secondary { height: 44px; padding-top: 6px; padding-bottom: 6px; background-color: #f3f3f3;
-	background-image: url(/img/bg-callout-left.jpg); background-position: top left; background-repeat: no-repeat; }
-
+	background-image: url(/img/bg-callout-left.jpg); background-position: top left; background-repeat: no-repeat;
+	margin-bottom: 0; }
+.context-menu-item { font-family: 'Noto Sans Korean', '맑은 고딕', '돋움', Arial !important; }
 #group-list-wrapper { padding-left: 16px; padding-right: 8px; }
 #group-list-wrapper ul { margin-left: 0; }
 #group-list-wrapper li { list-style-type: none; }
@@ -64,7 +58,7 @@ table td.btn-list-item:hover { background-color: #77b2d8; cursor: pointer; }
 .top-bar-right li:last-child { margin-left: 3px; }
 .menu .menu-text { width: 252px; padding: 0 1rem; display: inline-flex; }
 .logo-img { background-image: url('../img/logo.svg'); width: 120px; height: 36px; }
-.logo-text { margin-top: 12px;  }
+.logo-text { margin-top: 11px;  }
 .menu .menu-text { font-weight: normal; }
 .menu .is-active { background-image: url('/img/bg-underline.gif'); background-position: bottom; background-repeat: no-repeat; }
 .menu .is-active > a { background-color: inherit; color: #05854A; }
