--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -58,7 +58,7 @@
 
 <div class="cell shrink footer">
   <div class="grid-x">
-	  <div class="footer-text cell small-10 text-center">© 2020, DB금융투자 Co., Ltd. All Right Reserved.</div>
+	  <div class="footer-text cell small-10 text-center">© 2020 DB금융투자 Co., Ltd.</div>
 	  <div class="cell small-2"><img src="/img/logo.svg" style="width: 105px; margin-right: 36px;" class="float-right"></div>
   </div>
 </div>
@@ -71,7 +71,7 @@
 	  </button>
 	  <br>
 	  	<div class="button-group float-right">
-		  <a class="button secondary hollow">아니오</a>
+		  <a class="button secondary hollow" id="btn-reveal-close">아니오</a>
 		  <a class="button alert" href="javascript:doLogout();">예</a>
 		</div>
 	</div>
@@ -87,30 +87,35 @@
 	
 	<div id="snackbar"></div>
 
-	<script src="/jquery/jquery-3.5.1.min.js"></script>
-	<script src="/jquery/jquery-ui.min.js"></script>
-	<script src="/jquery/fancytree/jquery.fancytree-all.js"></script>
-	<script src="/jquery/fancytree/modules/jquery.fancytree.edit.js"></script>
-	<script src="/jquery/contextmenu/jquery.contextMenu.min.js"></script>
-	<script src="/js/vendor/foundation.min.js"></script>
-	<script src="/js/app.js"></script>
-	<script src="/js/sockjs.min.js"></script>
-	<script src="/js/stomp.min.js"></script>
-	<script>
-		window.alert = function(message) {
-			var x = document.getElementById("snackbar");
-			x.className = "show";
-			x.innerText = message;
-			setTimeout(function() {
-				x.className = x.className.replace("show", "");
-			}, 3000);
-		}
-		function doLogout() {
-			location.href = "/logout";
-		}
-	</script>
-	{{{layout.script}}}
-
 </div>
+
+<script src="/jquery/jquery-3.5.1.min.js"></script>
+<script src="/jquery/jquery-ui.min.js"></script>
+<script src="/jquery/fancytree/jquery.fancytree-all.js"></script>
+<!-- <script src="/jquery/fancytree/modules/jquery.fancytree.edit.js"></script> -->
+<script src="http://wwwendt.de/tech/fancytree/src/jquery.fancytree.edit.js"></script>
+<script src="/jquery/contextmenu/jquery.contextMenu.min.js"></script>
+<script src="/js/vendor/foundation.min.js"></script>
+<script src="/js/app.js"></script>
+<script src="/js/sockjs.min.js"></script>
+<script src="/js/stomp.min.js"></script>
+<script>
+window.alert = function(message) {
+	var x = document.getElementById("snackbar");
+	x.className = "show";
+	x.innerText = message;
+	setTimeout(function() {
+		x.className = x.className.replace("show", "");
+	}, 3000);
+}
+function doLogout() {
+	location.href = "/logout";
+}
+$("#btn-reveal-close").click(function() {
+	$("#bf-modal-user").foundation('close');
+});
+</script>
+{{{layout.script}}}
+	
 </body>
 </html>
