--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -91,7 +91,9 @@
 <script src="/jquery/jquery-3.5.1.min.js"></script>
 <script src="/jquery/jquery-ui.min.js"></script>
 <script src="/jquery/fancytree/jquery.fancytree-all.js"></script>
+<script src="/jquery/fancytree/jquery.fancytree-all-deps.min.js"></script>
 <script src="/jquery/fancytree/modules/jquery.fancytree.edit.js"></script>
+<script src="/jquery/fancytree/modules/jquery.fancytree.dnd5.js"></script>
 <script src="/jquery/contextmenu/jquery.contextMenu.min.js"></script>
 <script src="/js/vendor/foundation.min.js"></script>
 <script src="/js/app.js"></script>
