--- a/src/main/resources/templates/page/content.html
+++ b/src/main/resources/templates/page/content.html
@@ -12,10 +12,13 @@
 .select-row { padding: 0; margin: 3px auto; }
 .select-row i { cursor: pointer; color: #05854A; font-size: 26px; margin-top: 4px; }
 #btn-create { float: right; }
-#sel_category { float: left; margin-right: 12px; height: 32px; font-size: 13px; }
 .tree-btn { padding: 6px; min-width: 32px; font-size: 16px; }
 #sel_category, .tree-btn, .callout .button-group { margin-bottom: 0; }
 #editor-wrapper { display: none; }
+span.drag-source { border: 1px solid grey; border-radius: 3px; padding: 2px; background-color: silver; }
+span.fancytree-node.fancytree-drag-source { outline: 1px dotted grey; }
+span.fancytree-node.fancytree-drop-accept { outline: 1px dotted green; }
+span.fancytree-node.fancytree-drop-reject { outline: 1px dotted red; }
 </style>
 {{/style}}
 
@@ -29,7 +32,7 @@
 	  </ul>
 	</nav>
 	</div>
-	<div class="cell small-5">
+	<div id="wrapper-group-sel" class="cell small-5">
 		<select id="sel_category" onchange="onSelectChanged(this);">
 		    <option value="">----- 도움말그룹 선택 -----</option>
 			{{#list}}
