--- a/src/main/resources/templates/page/download.html
+++ b/src/main/resources/templates/page/download.html
@@ -37,15 +37,15 @@ tbody th, tbody td { padding: 0.1rem 0.625rem 0.1rem; }
 <div class="grid-x contents-area">
 
 	<!-- 1) 변경파일 -->
-	<div class="cell small-7" style="padding: 0 10px 0 10px;">
+	<div class="cell small-8" style="padding: 0 10px 0 10px;">
 		<table class="list-table">
 			<colgroup>
-				<col width="10%" />
-				<col width="10%" />
+				<col width="7%" />
+				<col width="7%" />
 				<col />
 				<col width="20%" />
 				<col width="10%" />
-				<col width="10%" />
+				<col width="14%" />
 			</colgroup>
 			<thead>
 				<tr>
@@ -78,14 +78,14 @@ tbody th, tbody td { padding: 0.1rem 0.625rem 0.1rem; }
 	</div>
 	
 	<!-- 2) 배포이력 -->
-	<div class="cell small-5 left-section" style="padding: 0 10px 0 20px;">
+	<div class="cell small-4 left-section" style="padding: 0 10px 0 20px;">
 		<table class="list-table">
 			<colgroup>
-				<col width="10%" />
-				<col width="30%" />
+				<col width="13%" />
+				<col />
 				<col width="20%" />
 				<col width="30%" />
-				<col width="10%" />
+				<col width="12%" />
 			</colgroup>
 			<thead>
 				<tr>
